src/objects/Meeting_Day_MERC__c.object
<CustomObject>
    <description>Object to track days of meetings and ToV cost of each day. Created 10/10/2013 by KLorenti.</description>
    <fields>
        <fullName>Confirm_ToV_Reporting_Change_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Validation checkbox for HCP Care to confirm that the ToV is being updated/corrected. Created 01/07/2014 by KLorenti, Mavens Consulting</description>
        <label>Confirm ToV Reporting Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Daily_Food_Beverage_Amount_MERC__c</fullName>
        <description>Food and Beverage 
Created by John A Adams 10/15/2013</description>
        <inlineHelpText>Please leave this field blank if no ToV is to be reported for Food &amp; Beverage for this meeting.</inlineHelpText>
        <label>Daily Food &amp; Beverage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Ground_Trans_Amount_MERC__c</fullName>
        <description>Daily ground transportation
Created by John A Adams 10/15/2013</description>
        <inlineHelpText>Please leave this field blank if no ToV is to be reported for Ground Transportation for this meeting.</inlineHelpText>
        <label>Daily Ground Transportation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Daily_Registration_Amount_MERC__c</fullName>
        <description>Store ToV estimate for Registration cost. Oliver Dunford 10/10/2013</description>
        <inlineHelpText>Please leave this field blank if no ToV is to be reported for Registration Fees for this meeting.</inlineHelpText>
        <label>Registration Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_MERC__c</fullName>
        <description>Date of the Meeting Day. Created 10/10/2013 by KLorenti.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Meeting_Time_Zone__c</fullName>
        <description>Stamped with the date locale based on the meeting time zone</description>
        <label>Date (Meeting Time Zone)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Unique_Meeting_Day_MERC__c</fullName>
        <description>Stamped via workflow to enforce a that each Meeting Day has a unique date.</description>
        <label>Force Unique Meeting Day</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to Meeting. Created 10/10/2013 by KLorenti</description>
        <label>Meeting</label>
        <referenceTo>Meeting_MERC__c</referenceTo>
        <relationshipLabel>Meeting Days</relationshipLabel>
        <relationshipName>Meeting_Days</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Time_Zone_MERC__c</fullName>
        <formula>text(Meeting_MERC__r.Meeting_Time_Zone_MERC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Meeting Day</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meeting Day</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_if_any_ToV_has_been_reported</fullName>
        <active>true</active>
        <description>Checks to see if any Meeting Participants have had ToV reported. Created 01/08/2014 by KLorenti, Mavens Consulting</description>
        <errorConditionFormula>ISPICKVAL( Meeting_MERC__r.Participant_ToV_Final_MERC__c,&quot;Yes&quot;) &amp;&amp;
(ISCHANGED ( Daily_Registration_Amount_MERC__c ) ||
ISCHANGED ( Daily_Ground_Trans_Amount_MERC__c) ||
ISCHANGED ( Daily_Food_Beverage_Amount_MERC__c )) &amp;&amp;
! Confirm_ToV_Reporting_Change_MERC__c</errorConditionFormula>
        <errorDisplayField>Confirm_ToV_Reporting_Change_MERC__c</errorDisplayField>
        <errorMessage>ToV has already been reported for participants of this Meeting. Customer Meeting Services needs to confirm this change before it can be made.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Blank_If_Not_Reported_MERC</fullName>
        <active>true</active>
        <description>Users cannot enter a 0.00 if ToV has not been reported.</description>
        <errorConditionFormula>(Daily_Food_Beverage_Amount_MERC__c = 0.00 ||
Daily_Ground_Trans_Amount_MERC__c = 0.00 ||
Daily_Registration_Amount_MERC__c = 0.00) &amp;&amp;  (ISPICKVAL(Meeting_MERC__r.Participant_ToV_Final_MERC__c,&quot;No&quot;) || ISPICKVAL(Meeting_MERC__r.Participant_ToV_Final_MERC__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>You may not enter 0.00 unless ToV has already been reported for this Meeting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enter_Zero_If_Reported_MERC</fullName>
        <active>true</active>
        <description>Users cannot enter a blank if ToV has been reported.</description>
        <errorConditionFormula>((ISCHANGED(Daily_Food_Beverage_Amount_MERC__c) &amp;&amp; 
ISBLANK(Daily_Food_Beverage_Amount_MERC__c)) || 

(ISCHANGED(Daily_Ground_Trans_Amount_MERC__c) &amp;&amp; 
ISBLANK(Daily_Ground_Trans_Amount_MERC__c)) || 

(ISCHANGED(Daily_Registration_Amount_MERC__c) &amp;&amp; 
ISBLANK(Daily_Registration_Amount_MERC__c)) )

&amp;&amp; (ISPICKVAL(Meeting_MERC__r.Participant_ToV_Final_MERC__c,&quot;Yes&quot;))</errorConditionFormula>
        <errorMessage>You may not enter a blank value if ToV has already been reported for this Meeting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Meeting_Day_Range</fullName>
        <active>true</active>
        <description>Ensure that a Meeting Date is within 3 days +/- of the Meeting Start or End Date.  This is to accommodate shoulder dates but also limit the dates that can be chosen for Meeting Days.  Created by J. Adams 2/3/2014</description>
        <errorConditionFormula>(Date_MERC__c &gt; (Meeting_MERC__r.End_Date_of_Event_MERC__c + 3))  ||
(Date_MERC__c &lt; (Meeting_MERC__r.Date_of_Event_MERC__c  - 3))</errorConditionFormula>
        <errorDisplayField>Date_MERC__c</errorDisplayField>
        <errorMessage>The Meeting Day selected must be within 3 +/- days of the start or end of the meeting.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Negative_Amount_MERC</fullName>
        <active>true</active>
        <description>Prevent a negative amount from being entered.</description>
        <errorConditionFormula>(ISCHANGED(Daily_Food_Beverage_Amount_MERC__c) &amp;&amp;
Daily_Food_Beverage_Amount_MERC__c &lt; 0 ) ||

(ISCHANGED(Daily_Ground_Trans_Amount_MERC__c ) &amp;&amp;
Daily_Ground_Trans_Amount_MERC__c &lt; 0 ) ||

(ISCHANGED(Daily_Registration_Amount_MERC__c ) &amp;&amp;
Daily_Registration_Amount_MERC__c &lt; 0)</errorConditionFormula>
        <errorMessage>You man not enter a value less than zero.</errorMessage>
    </validationRules>
</CustomObject>